# egain_platform-eng-assignment

./: .gitignore  README.md  egain_knowledge.db  pyproject.toml
app/: README.md  auth.py  config.py  db.py  logging_setup.py  main.py  metrics.py  models.py  services.py
app/routers/: ingestion.py  search.py
design/: architecture_diagram.md  system_design.md
iac/: README.md
iac/terraform/: alarms.tf  alb.tf  apigateway.tf  autoscaling.tf  codedeploy.tf  ecr.tf  ecs.tf  iam.tf  logging.tf  network.tf  outputs.tf  providers.tf  rds.tf  security_groups.tf  variables.tf
scripts/: benchmark.py
tests/: test_api.py
